Fix overlaping error message and remove huge padding under name input
With this there is no jitter and overlap

Fixes #477

--- a/src/app/frontend/deploy/deployfromsettings.scss
+++ b/src/app/frontend/deploy/deployfromsettings.scss
@@ -22,18 +22,16 @@ md-progress-linear {
     margin-bottom: -$bar-height;
     overflow: hidden;
     top: -$bar-height;
+
+    &:not(.kd-deploy-form-progress-show) {
+      visibility: hidden;
+    }
   }
 }
+
+
 
 .kd-deploy-input-row {
   margin-bottom: $baseline-grid;
   margin-top: $baseline-grid;
-}
-
-.kd-deploy-form-name-container {
-  margin-bottom: $baseline-grid * 8;
-}
-
-.kd-deploy-form-name-validation-container {
-  height: $bar-height;
 }
